[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "STLander"
dynamic = ["version"]
description = "PySide GUI + CLI to translate STL center-of-mass to origin and align principal axes with XYZ."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.23",
    "scipy>=1.9",
    "pyvista>=0.41",
    "pyvistaqt>=0.11",
    "PySide6>=6.5",
]

[project.scripts]
stlander = "stlander.cli:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.dynamic]
version = {attr = "stlander.__version__"}

[tool.setuptools.packages.find]
where = ["."]
